Added 'score' text to HTML and score heading

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>SNAKE: The Remake!</h1>
+<h3>Score:</h3>
 <div class="scoreDisplay"></div>
 <div class="grid"></div>
 <div class="button">
